# chi-tech

./: .ZPhi3D_0.vtu.swp  .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  InstallationNotes.md  LICENSE  Line0.py  Line1.py  Line2.py  Line3.py  Makefile  README.md  Test.lua  TestLegendre.lua  YMesh0.py  YMesh1.py  YMesh2.py  YMesh3.py  ZLFFI00.py  ZLFFI01.py  ZLFFI02.py  ZLFFI03.py  ZLFFI04.py  ZLFFI05.py  ZLFFI10.py  ZLFFI11.py  ZLFFI12.py  ZLFFI13.py  ZLFFI20.py  ZPFFI00.py  ZPFFI01.py  ZPFFI02.py  ZPFFI03.py  ZPFFI10.py  ZPhi.pvtu  ZPhi3D.pvtu  ZPhi3D_0.vtu  ZPhi3D_1.vtu  (+8 more)
CHI_TECH/CHI_MODULES/CHI_AUDIO/: CMakeLists.txt  chi_audio.h  chi_audio_00_constrdestr.cpp  chi_audio_01_initialize.cpp  chi_audio_02_controls.cpp  chi_audio_incdef.h
ChiModules/: CMakeLists.txt  module_lua_inclusion.lua  module_lua_register.h
ChiModules/CFEMDiffusion/: cfem_diffusion_bndry.h  cfem_diffusion_solver.h
ChiModules/DFEMDiffusion/: CMakeLists.txt  dfem_diffusion_solver.cc  dfem_diffusion_solver.h  dfem_diffusion_utils.cc
ChiModules/DFEMDiffusionSolver/: dfem_diffusion_bndry.h  dfem_diffusion_solver.cc  dfem_diffusion_utils.cc
ChiModules/DiffusionSolver/: chi_diffusion.h  chi_diffusion_utils.cc
ChiModules/DiffusionSolvers/: cfem_diffusion_solver.cc  cfem_diffusion_solver.h  cfem_diffusion_utlis.cc
ChiModules/KEigenvalueSolver/: CMakeLists.txt  execute_k_solver.cc  initialize_k_solver.cc  initialize_precursors.cc  integrate_volume.cc  k_eigenvalue_execute.cc  k_eigenvalue_initialize.cc  k_eigenvalue_solver.h  kes_compute_precursors.cc  kes_k_eigenvalue_solver.h  kes_main_execute.cc  kes_main_initialize.cc
ChiModules/LBKEigenvalueSolver/: lbkes_k_eigenvalue_solver.h  lbkes_main_execute.cc
ChiModules/LBSAdjointSolver/: CMakeLists.txt  lbs_adjoint.cc  lbsadj_solver.h  lbsadj_solver_00_constrdestr.cc  lbsadj_solver_01_main_initialize.cc  lbsadj_solver_02_main_execute.cc  lbsadj_solver_04_qoi.cc  lbsadj_solver_05a_export_imp.cc
ChiModules/LBSCurvilinear/: lbs_curvilinear_solver.cc  lbs_curvilinear_solver.h  lbs_curvilinear_sweepchunk_pwl.cc  lbs_curvilinear_sweepchunk_pwl.h
ChiModules/LBSTransientSolver/: lbts_00_constrdestr.cc  lbts_01_initialize.cc  lbts_02_execute.cc  lbts_step_precursors.cc  lbts_transient_solver.h
ChiModules/LinearBoltzmannSolver/: lbs_00_constrdestr.cc  lbs_01_main_initialize.cc  lbs_01a_inputchecks.cc  lbs_01aa_inputchecks.cc  lbs_01ab_compute_nummoments.cc  lbs_01ac_print_simheader.cc  lbs_01b_initmaterials.cc  lbs_01b_print_simheader.cc  lbs_01c_init_boundaries.cc  lbs_01c_init_spat_discr.cc  lbs_01c_initmaterials.cc  lbs_01d_init_spat_discr.cc  lbs_01d_initparrays.cc  lbs_01e_initgroupsets.cc  lbs_01g_initparrays.cc  lbs_01i_init_point_sources.cc  lbs_02_main_execute.cc  lbs_02b_sweep_all_grpsets.cc  lbs_03a_compsweeporder.cc  lbs_03aa_iduniqso.cc  lbs_03b_initfluds.cc  lbs_03c_angleaggregation.cc  lbs_03ca_angleagg_single.cc  lbs_03cb_angleagg_polar.cc  lbs_03cc_angleagg_azimuthal.cc  lbs_03d_wgdsa.cc  lbs_03e_tgdsa.cc  lbs_03f_resetswporderings.cc  lbs_04_restartdata.cc  lbs_04a_restartdata.cc  lbs_04b_angular_fluxes.cc  lbs_04c_io_flux_moments.cc  lbs_05_angular_fluxes.cc  lbs_compute_balance.cc  lbs_compute_precursors.cc  lbs_linear_boltzmann_solver.h  lbs_make_subset.cc  lbs_make_subset.h  lbs_structs.h  lbs_vectorassembly.cc
ChiModules/MGDiffusion/: mg_diffusion_bndry.h  mg_diffusion_solver.h  mgd_01_main_init.cc  mgd_01a_init_materials.cc  mgd_01b_set_bc.cc  mgd_01c_assemble_A_bext.cc  mgd_03_main_exec.cc  mgd_03c_asemble_rhs_g.cc  mgd_03e_solve1g.cc
ChiModules/lua/: chi_modules_lua.cc  chi_modules_lua.h
modules/: CMakeLists.txt  Old.txt  mainpage_quickref.txt  mainpage_tableinput.txt  module_lua_inclusion.lua  module_lua_register.h
modules/CFEMDiffusion/: cfem_diffusion_bndry.h  cfem_diffusion_solver.cc  cfem_diffusion_solver.h  cfem_diffusion_utils.cc
modules/DFEMDiffusion/: dfem_diffusion_bndry.h  dfem_diffusion_solver.cc  dfem_diffusion_solver.h  dfem_diffusion_utils.cc
modules/DiffusionSolver/: CMakeLists.txt  UnitIntegralContainer.cc  UnitIntegralContainer.h  chi_diffusion_utils.cc
modules/FVDiffusion/: fv_diffusion_bndry.h  fv_diffusion_solver.cc  fv_diffusion_solver.h  fv_diffusion_utils.cc
modules/LBKEigenvalueSolver/: lbkes_main_execute.cc
modules/LBSAdjointSolver/: lbs_adjoint.cc  lbs_adjoint.h  lbsadj_solver.h  lbsadj_solver_01_main_initialize.cc  lbsadj_solver_02_main_execute.cc  lbsadj_solver_04_qoi.cc
modules/LBSCurvilinear/: lbs_curvilinear_solver.cc  lbs_curvilinear_sweepchunk_pwl.cc  lbs_curvilinear_sweepchunk_pwl.h
modules/LBSTransientSolver/: lbts_00_constrdestr.cc  lbts_01_initialize.cc  lbts_02_execute.cc  lbts_callback.cc  lbts_step_precursors.cc  lbts_transient_solver.h
modules/LinearBoltzmannSolver/: CMakeLists.txt  lbs_00_constrdestr.cc  lbs_01_main_initialize.cc  lbs_01a_inputchecks.cc  lbs_01b_print_simheader.cc  lbs_01c_initmaterials.cc  lbs_01e_initgroupsets.cc  lbs_01f_compute_nummoments.cc  lbs_01g_initparrays.cc  lbs_01h_init_boundaries.cc  lbs_01i_init_point_sources.cc  lbs_02_main_execute.cc  lbs_03a_compsweeporder.cc  lbs_03f_resetswporderings.cc  lbs_04a_restartdata.cc  lbs_05a_update_fieldfuncs.cc  lbs_compute_balance.cc  lbs_compute_precursors.cc  lbs_linear_boltzmann_solver.h
modules/LinearBoltzmannSolvers/: CMakeLists.txt
modules/MGDiffusion/: CMakeLists.txt  mg_diffusion_bndry.h  mg_diffusion_solver.h  mgd_01_main_init.cc  mgd_01a_init_materials.cc  mgd_01aa_init_two_grid_params.cc  mgd_01ab_init_two_grid_volume_frac.cc  mgd_01b_set_bc.cc  mgd_01c_assemble_A_bext.cc  mgd_02_main_exec.cc  mgd_02a_asemble_rhs_g.cc  mgd_02b_solve1g.cc  mgd_02c_asemble_rhs_tg.cc  mgd_02d_update_flux_with_two_grid_flux.cc  mgd_03_main_exec.cc  mgd_03c_asemble_rhs_g.cc  mgd_04_update_fieldfuncs.cc
modules/PointReactorKinetics/: point_reactor_kinetics.cc  point_reactor_kinetics.h
modules/ReactorPointKinetics/: point_reactor_kinetics.cc  point_reactor_kinetics.h  reactor_point_kinetics.h  rpk.cc
modules/doc/: modules_maindoc_page.h
modules/lua/: chi_modules_lua.cc
(+4895 files in other folders)
